--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,7 @@ jobs:
         path: dist/
         
     - name: Install package
+      shell: bash
       run: |
         python -m pip install --upgrade pip
         python -m pip install dist/*.whl
