--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -50,6 +50,7 @@ jobs:
         uses: python-semantic-release/python-semantic-release@v10.2.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          build: false  # We'll build separately to ensure dependencies are available
           
       - name: Build | Build distribution artifacts
         if: steps.release.outputs.released == 'true'
