--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -51,6 +51,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           build: false  # We'll build separately to ensure dependencies are available
+          git_committer_name: "github-actions[bot]"
+          git_committer_email: "github-actions[bot]@users.noreply.github.com"
           
       - name: Build | Build distribution artifacts
         if: steps.release.outputs.released == 'true'
